--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,4 @@
-@import 'styles/theme-palette.scss';
+@import 'styles/theme-palette';
 
 #app {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
