--- a/src/components/loader.scss
+++ b/src/components/loader.scss
@@ -1,10 +1,11 @@
-@import 'styles/theme-palette.scss';
+@import 'styles/variables';
+@import 'styles/theme-palette';
 
 .loader-wrapper {
   align-items: center;
   border-radius: 6px;
   display: flex;
-  height: calc(100vh - 3.25rem - 9rem - 24px);
+  height: calc(100vh - $navbar-height - $footer-top-padding - $footer-bottom-padding - $line-height);
   justify-content: center;
   width: 100%;
 
